--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -17,7 +17,7 @@
         <nav role="navigation">
           <%= if @current_user do %>
             <ul class="nav nav-pills pull-right">
-              <li><a href="<%= auth_path(@conn, :delete) %>">Log Out</a></li>
+              <li><%= link "Log out", to: auth_path(@conn, :delete), method: :delete, class: "btn btn-danger" %></li>
             </ul>
           <% else %>
             <ul class="nav nav-pills pull-right">
